testsuite/tests/quantified-constraints/T17267.stderr

T17267.hs:17:12: error:
    • Reduction stack overflow; size = 201
      When simplifying the following type: a ~ b
      Use -freduction-depth=0 to disable this check
      (any upper bound you could choose might fail unpredictably with
       minor updates to GHC, so disabling the check is recommended if
       you're sure that type checking should terminate)
    • In the expression: r
      In an equation for ‘oops’: oops r = r
      In an equation for ‘unsafeCoerce’:
          unsafeCoerce a
            = oops a
            where
                oops :: (a ~ b => Thing a b) => (Thing a b => r) -> r
                oops r = r
